# tree-core-backend

./: .gitignore  3RD_PARTY.md  LICENSE-3RD-PARTY.md  Makefile  README.md
.github/workflows/: parser-unit-test.yml
client/: .gitignore  LICENSE  package-lock.json  package.json  tsconfig.json  tslint.json
client/snippets/: rvs.json
client/src/: extension.ts
client/syntaxes/: rvs.tmLanguage
release_notes/: template.md
scripts/: setup.sh
src/lang/: Cargo.toml
src/lang/src/: contents.rs  diagnostic.rs  latin1.rs  lib.rs  main.rs  message.rs  source.rs
src/parser/: .gitignore  Cargo.toml
src/parser/src/: fst.rs  main.rs  vcd.rs
src/parser/vcd/: Makefile
src/parser/vcd/src/: VCDFile.cpp  VCDFile.hpp  VCDFileParser.cpp  VCDFileParser.hpp  VCDParser.ypp  VCDScanner.l  demo.cpp  main.cpp
src/server/: Cargo.toml
src/server/src/: lib.rs  main.rs  rpc_channel.rs  stdio_server.rs
src/simu/: Cargo.toml  Makefile  README.md
src/simu/cosim/: .gitignore  Makefile  exe_stage.v  id_stage.v  if_stage.v  main.cpp  regfile.v  rvcpu.v  sim_main.cpp  top.v
src/simu/scripts/: build-test.sh  setup.sh  unit-test.sh
src/simu/src/: cli.rs  config.rs  core.rs  csr.rs  data.rs  decode.rs  device.rs  inst.rs  lib.rs  main.rs  mem.rs  mmu.rs  priv.rs  privilege.rs  regfile.rs  shell.rs  thrp.rs  trace.rs  web.rs  ws.rs
src/simu/static/: index.html  main.js  ws.html
